fix card-container fade-in animation

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
             { selector: '.community-heading', class: 'visible-heading' },
             { selector: '.img-item', class: 'visible-img' },
             { selector: '.technologies', class: 'visible-technologies' },
+            { selector: '.card-container', class: 'visible-card-container' },
         ];
 
         contentList.forEach(({ selector, class: visibleClass }) => {
